--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "random-js": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "wired-elements": "^1.0.0"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
