--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "deploy": "gh-pages -d build",
     "lint": "./node_modules/.bin/eslint src/*.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run lint"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -39,6 +45,7 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-plugin-react": "^7.16.0",
+    "husky": "^3.0.9"
   }
 }
