--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "^3.2.0",
     "styled-components": "^4.4.0"
   },
+  "main": "src/gerador.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
