feat(package): update and move dependencies to devDependencies

--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "private": true,
   "homepage": "http://hack-and-slash.github.io/gerador-de-goblins-malditos",
   "dependencies": {
-    "gh-pages": "^2.1.1",
-    "random-js": "^2.0.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "^3.2.0",
-    "styled-components": "^4.4.0"
+    "random-js": "^2.1.0"
   },
   "main": "src/gerador.js",
   "scripts": {
@@ -39,6 +34,11 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint-plugin-react": "^7.16.0",
+    "gh-pages": "^2.1.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "^3.2.0",
+    "styled-components": "^4.4.0"
   }
 }
