--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "homepage": "http://hack-and-slash.github.io/gerador-de-goblins-malditos",
   "dependencies": {
-    "random-js": "^2.1.0"
+    "random-js": "^2.1.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "styled-components": "^4.4.0"
   },
   "main": "src/gerador.js",
   "scripts": {
@@ -43,10 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "gh-pages": "^2.1.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
     "react-scripts": "^3.2.0",
-    "styled-components": "^4.4.0",
     "husky": "^3.0.9"
   }
 }
