--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "homepage": "http://hack-and-slash.github.io/gerador-de-goblins-malditos",
   "dependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "random-js": "^2.1.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -41,12 +45,9 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
     "gh-pages": "^2.1.1",
+    "husky": "^3.0.9",
     "react-scripts": "^3.2.0",
-    "husky": "^3.0.9"
+    "typescript": "^4.1.3"
   }
 }
