--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint src -c .eslintrc --ext .js"
+    "lint": "eslint ./src/**/*.{ts,tsx}"
   },
   "husky": {
     "hooks": {
@@ -45,8 +45,18 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.4",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.9",
+    "prettier": "^2.2.1",
     "react-scripts": "^3.2.0",
     "typescript": "^4.1.3"
   }
