--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
+      "pre-commit": "",
       "pre-push": "npm run lint"
     }
   },
