--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "main": "src/gerador.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
@@ -48,6 +48,7 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
@@ -58,7 +59,9 @@
     "gh-pages": "^2.1.1",
     "husky": "^3.0.9",
     "prettier": "^2.2.1",
-    "react-scripts": "^3.2.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vite": "^3.1.8",
+    "vite-plugin-svgr": "^2.2.2",
+    "vite-tsconfig-paths": "^3.5.2"
   }
 }
